Upped Rev to 2.1. Added R12 and R13. Moved connections on micro-controller.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,13 @@
 
 *.~vsd
 
+code/LED Relay 2/Debug
+code/.vs
 
 Datasheets/pdi_header.png
 
 LED Relay-BOM-export.csv
+
+fp-lib-table
+
+*.kicad_pcb-bak
